compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__case_clause_guards__record_access_on_keyword.snap
---
source: compiler-core/src/nix/tests/case_clause_guards.rs
expression: "\npub type A {\n  A(inherit: Int, builtins: Bool)\n}\n\npub fn main(x: A) {\n  case x {\n    _ if x.inherit == 5 || x.builtins -> True\n    _ -> False\n  }\n}\n"
---
let
  A =
    inherit': builtins':
      { __gleamTag = "A"; "inherit" = inherit'; builtins = builtins'; };
  
  main = x: if (x."inherit" == 5) || x.builtins then true else false;
in
{ inherit A main; }
