compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__case_clause_guards__tuple_index.snap
---
source: compiler-core/src/nix/tests/case_clause_guards.rs
expression: "pub fn main(x, xs: #(Bool, Bool, Bool)) {\n  case x {\n    _ if xs.2 -> 1\n    _ -> 0\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main(x, xs: #(Bool, Bool, Bool)) {
  case x {
    _ if xs.2 -> 1
    _ -> 0
  }
}


----- COMPILED NIX
let main = x: xs: if builtins.elemAt xs 2 then 1 else 0; in { inherit main; }
